# tree-sitter-conao3-json

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-conao3_json.h  tree-sitter-conao3_json.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_conao3_json/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterConao3JsonTests/: TreeSitterConao3JsonTests.swift
src/: grammar.json  node-types.json  parser.c
test/corpus/: basic.txt
